--- a/css/style.css
+++ b/css/style.css
@@ -154,12 +154,12 @@ span {
   margin-top: 45px;
 }
 .rocket {
-  max-width: 330px;
-  position: absolute;
-  top: 400px;
-  right: 0px;
-  z-index: 99;
-  transition: 0.2s;
+     width: 220px;
+    position: absolute;
+    top: -200px;
+    right: 100px;
+    z-index: 99;
+    transition: 0.2s;
 }
 .footer {
   top: 150px;
